Fixed visual bug in sp-card-content that caused sp-card-content to be hidden, collapsing the card height Include sp-state-disabled styling for .sp-result-item-overlay-action

--- a/src/4-molecules/cards/index.scss
+++ b/src/4-molecules/cards/index.scss
@@ -147,21 +147,21 @@
   &:hover {
     @include sp-shadow(medium, 0 0 .4em .07em);
 
-		.sp-card-hover {
-			top: -10px;
-			right: -10px;
-			left: -10px;
-			bottom: -10px;
-			visibility: visible;
-			opacity: 1;
-			padding: 16px;
+    .sp-card-hover {
+      top: -10px;
+      right: -10px;
+      left: -10px;
+      bottom: -10px;
+      visibility: visible;
+      opacity: 1;
+      padding: 16px;
     }
 
-    .sp-card-content {
-      display: none;
+    > .sp-card-content {
+      visibility: hidden;
     }
 
-	}
+  }
 
   .sp-card-footer {
     align-items: flex-end;
@@ -259,6 +259,7 @@
       padding-top: 0;
       padding-bottom: 0;
       width: 53%;
+      visibility: visible;
       .sp-card-label, .sp-card-title, .sp-card-id {
         text-align: left !important;
       }
